--- a/source/Tutorials/1_Within-sample.ipynb
+++ b/source/Tutorials/1_Within-sample.ipynb
@@ -8,13 +8,13 @@
     "\n",
     "This tutorial demonstrates the procedure for training and evaluating XChrom model on a single sample. The workflow includes splitting the sample into training and test sets, preprocessing the data to generate model inputs, training the model, and performing prediction and evaluation.\n",
     "\n",
-    "#### **Data Preprocessing**\n",
+    "- **Data Preprocessing**                                        \n",
     "We used a publicly available 10x Genomics Multiome dataset from fresh embryonic E18 mouse brain (paired scRNA-seq and scATAC-seq) as an example. The scATAC-seq data was partitioned by cells and peaks to generate train_val set, cross-cell test set, cross-region test set, and cross-both test set for model training and evaluation. For the scRNA-seq data, we performed PCA to generate initial cell embeddings, which served as cell identity information for XChrom.\n",
     "\n",
-    "#### **Model Training**\n",
+    "- **Model Training**                                                                \n",
     "XChrom takes two inputs: ① DNA sequence (one-hot encoded, 1 × 1344bp) and, ② cell embeddings (cell number × 32). The model is trained to predict chromatin accessibility probabilities for each genomic region across all cells. \n",
     "\n",
-    "#### **Prediction and Evaluation**\n",
+    "- **Prediction and Evaluation**                                                          \n",
     "To comprehensively assess the predictive performance of XChrom, we perfomed 3 test tasks: \n",
     "- (i) \"cross-region\" test, which evaluates the model's ability to predict new genomic regions not seen during training; \n",
     "- (ii) \"cross-cell\" test, which assesses the model's generalization to new cells not included in the training set;\n",
