--- a/source/Tutorials/2_Cross-samples.ipynb
+++ b/source/Tutorials/2_Cross-samples.ipynb
@@ -11,15 +11,14 @@
     "\n",
     "We utilized a publicly available dataset of single-cell multiome data collected from bone marrow mononuclear cells (BMMCs) of 12 healthy human donors. The dataset includes multiple batches arising from donor sources and sequencing platforms. All samples were prepared using a standardized protocol. The data was subsequently annotated to identify cell types and remove doublets.\n",
     "\n",
-    "- **Data Preprocessing**\n",
-    "As an example, we extracted two samples labeled `s1d1` and `s2d1` (where `s` denotes sequencing site and `d` denotes donor). We used `s1d1` as the training set and `s2d1` as the test set. For the training scATAC-seq data, we performed partitioning by cells and peaks to generate training/validation data for model input, following the same procedure described in the `Within-Sample` tutorial. For the test scATAC-seq data, we used the entire test set for evaluation.\n",
+    "- **Data Preprocessing**                                       \n",
+    "    - As an example, we extracted two samples labeled `s1d1` and `s2d1` (where `s` denotes sequencing site and `d` denotes donor). We used `s1d1` as the training set and `s2d1` as the test set. For the training scATAC-seq data, we performed partitioning by cells and peaks to generate training/validation data for model input, following the same procedure described in the `Within-Sample` tutorial. For the test scATAC-seq data, we used the entire test set for evaluation.                                                 \n",
+    "    - For the scRNA-seq data, we first performed batch effect correction on both `s1d1` and `s2d1` samples using Harmony (though alternative methods such as Scanorama, scVI, or ingest could be employed). The batch-corrected cell embeddings-typically named `'X_pca_harmony'`-were stored in the respective scRNA-seq datasets of both samples and served as input for model training and prediction.\n",
     "\n",
-    "For the scRNA-seq data, we first performed batch effect correction on both `s1d1` and `s2d1` samples using Harmony (though alternative methods such as Scanorama, scVI, or ingest could be employed). The batch-corrected cell embeddings-typically named `'X_pca_harmony'`-were stored in the respective scRNA-seq datasets of both samples and served as input for model training and prediction.\n",
-    "\n",
-    "- **Model Training**\n",
+    "- **Model Training**                                    \n",
     "XChrom takes two inputs: ① DNA sequences (one-hot encoded, 1 × 1344bp) and ② cell embeddings (cell number × 32). The model is trained to predict chromatin accessibility probabilities for each genomic region across all cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
     "\n",
-    "- **Prediction and Evaluation**\n",
+    "- **Prediction and Evaluation**                   \n",
     "After training, we evaluate the preprocessed test sample from two perspectives:                              \n",
     "    - **Binary classification metrics:** auROC and auPRC, as primary evaluation metrics, which were summarized at the overall, per-cell and per-peak levels.\n",
     "    - **Cell state fidelity:** Using the neighbor score (NS) to quantify cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods.Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph."
