--- a/source/quick_start.ipynb
+++ b/source/quick_start.ipynb
@@ -21,13 +21,13 @@
     "\n",
     "### Demo data (model input)\n",
     "- The demo data consists of a small subset (100 cells and 1000 peaks) sampled from the original dataset.\n",
-    "- Preprocessed training and test data are provided in 'xchrom/data/train_data/' directory.\n",
-    "- The raw cell embeddings h5ad file is provided in the 'xchrom/data/test_rna.h5ad' directory.\n",
+    "- Preprocessed training and test data are provided in `xchrom/data/train_data/` directory.\n",
+    "- The raw cell embeddings h5ad file is provided in the `xchrom/data/test_rna.h5ad` directory.\n",
     "\n",
     "### Output\n",
-    "- Trained model: './data/quick_start/E1000best_model.h5'\n",
-    "- Training history (pickle): './data/quick_start/history.pickle'\n",
-    "- Training history plot (PDF): './data/quick_start/train_history_plot.pdf'"
+    "- Trained model: `./data/quick_start/E1000best_model.h5`\n",
+    "- Training history (pickle): `./data/quick_start/history.pickle`\n",
+    "- Training history plot (PDF): `./data/quick_start/train_history_plot.pdf`"
    ]
   },
   {
