--- a/source/Tutorials/1_Within-sample.ipynb
+++ b/source/Tutorials/1_Within-sample.ipynb
@@ -16,11 +16,11 @@
     "\n",
     "- **Prediction and Evaluation**                                                          \n",
     "To comprehensively assess the predictive performance of XChrom, we perfomed 3 test tasks: \n",
-    "- (i) \"cross-region\" test, which evaluates the model's ability to predict new genomic regions not seen during training; \n",
-    "- (ii) \"cross-cell\" test, which assesses the model's generalization to new cells not included in the training set;\n",
-    "- (iii) \"cross-both\" test, which tests prediction of unseen genomic regions in unseen cells and represents the most challenging task. \n",
+    "    - (1) \"cross-region\" test, which evaluates the model's ability to predict new genomic regions not seen during training; \n",
+    "    - (2) \"cross-cell\" test, which assesses the model's generalization to new cells not included in the training set;\n",
+    "    - (3) \"cross-both\" test, which tests prediction of unseen genomic regions in unseen cells and represents the most challenging task. \n",
     "\n",
-    "For each test, we used two binary classification metrics—auROC and auPRC—as primary evaluation metrics, which were summarized at the overall, per-cell and per-peak levels. To evaluate the cell state fidelity after prediction, we adopted two metrics: NS, which quantifies cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and LS, which measures the consistency of cell-type labels within local neighborhoods. Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph. \n",
+    "    For each test, we used two binary classification metrics—auROC and auPRC—as primary evaluation metrics, which were summarized at the overall, per-cell and per-peak levels. To evaluate the cell state fidelity after prediction, we adopted two metrics: NS, which quantifies cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and LS, which measures the consistency of cell-type labels within local neighborhoods. Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph. \n",
     "\n",
     "For datasets lacking prior cell annotations, we used cluster indices identified via Leiden clustering of scRNA data as proxy cell type labels for LS calculation."
    ]
@@ -108,10 +108,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This process generates three H5AD files (saved to ./data/1_within_sample/):\n",
-    "- m_brain_paired.h5ad — converted raw paired data\n",
-    "- m_brain_paired_rna.h5ad — extracted scRNA data\n",
-    "- m_brain_paired_atac.h5ad — extracted scATAC data"
+    "This process generates three H5AD files (saved to `./data/1_within_sample/`):\n",
+    "- `m_brain_paired.h5ad` — converted raw paired data\n",
+    "- `m_brain_paired_rna.h5ad` — extracted scRNA data\n",
+    "- `m_brain_paired_atac.h5ad` — extracted scATAC data"
    ]
   },
   {
@@ -2726,8 +2726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If `plot_umap=True`, UMAP visualization of test cell predictions by XChrom will be displayed.                           \n",
-    "In this plot: larger points denote test cells, while background points denote training cells."
+    "NS and LS metrics are computed based on the predicted test data. If `plot_umap=True`, UMAP visualization of test cell predictions by XChrom will be displayed. In this plot: larger points denote test cells, while background points denote training cells."
    ]
   },
   {
@@ -2789,7 +2788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This visualization is generated after denoising the entire dataset. NS and LS metrics are computed based on the denoised scATAC data, `plot_umap=True` will display UMAP results."
+    "NS and LS metrics are computed based on the denoised scATAC data. This visualization is generated after denoising the entire dataset, `plot_umap=True` will display UMAP results."
    ]
   }
  ],
