--- a/source/Tutorials/2_Cross-samples.ipynb
+++ b/source/Tutorials/2_Cross-samples.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d848f74",
    "metadata": {},
@@ -12,7 +13,7 @@
     "We utilized a publicly available dataset of single-cell multiome data collected from bone marrow mononuclear cells (BMMCs) of 12 healthy human donors. The dataset includes multiple batches arising from donor sources and sequencing platforms. All samples were prepared using a standardized protocol. The data was subsequently annotated to identify cell types and remove doublets.\n",
     "\n",
     "- **Data Preprocessing**                                       \n",
-    "    - As an example, we extracted two samples labeled `s1d1` and `s2d1` (where `s` denotes sequencing site and `d` denotes donor). We used `s1d1` as the training set and `s2d1` as the test set. For the training scATAC-seq data, we performed partitioning by cells and peaks to generate training/validation data for model input, following the same procedure described in the `Within-Sample` tutorial. For the test scATAC-seq data, we used the entire test set for evaluation.                                                 \n",
+    "    - As an example, we extracted two samples labeled `s1d1` and `s2d1` (where `s` denotes sequencing site and `d` denotes donor). We used `s1d1` as the training set and `s2d1` as the test set. For the training scATAC-seq data, we performed partitioning by cells and peaks to generate training/validation data for model input, following the same procedure described in the `1_Within-sample analysis` tutorial. For the test scATAC-seq data, we used the entire test set for evaluation.                                                 \n",
     "    - For the scRNA-seq data, we first performed batch effect correction on both `s1d1` and `s2d1` samples using Harmony (though alternative methods such as Scanorama, scVI, or ingest could be employed). The batch-corrected cell embeddings-typically named `'X_pca_harmony'`-were stored in the respective scRNA-seq datasets of both samples and served as input for model training and prediction.\n",
     "\n",
     "- **Model Training**                                    \n",
@@ -313,8 +314,8 @@
    "id": "be3a4728-67e7-4e28-a2e7-15a9b1646f00",
    "metadata": {},
    "source": [
-    "- We use Harmony to correct batch effects between the two samples. After filtering, we concatenate the samples, perform PCA (e.g., 32 components) to embed the transcriptomic profiles, and then run Harmony on the PCs to iteratively remove dataset-specific effects. This yields batch-corrected embeddings stored as `RNA.obsm['X_pca_harmony']`, which represent each cell and serve as the raw cell embeddings for subsequent model input.\n",
-    "    - Alternatively, latent embeddings from other integration methods—such as scVI or biology foundation models—can also be used as raw cell embeddings. Save the resulting array in `RNA.obsm[cellembed_raw]` (shape: n_cells × d) so the model can access it."
+    "We use Harmony to correct batch effects between the two samples. After filtering, we concatenate the samples, perform PCA (e.g., 32 components) to embed the transcriptomic profiles, and then run Harmony on the PCs to iteratively remove dataset-specific effects. This yields batch-corrected embeddings stored as `RNA.obsm['X_pca_harmony']`, which represent each cell and serve as the raw cell embeddings for subsequent model input.\n",
+    "- Alternatively, latent embeddings from other integration methods—such as scVI or biology foundation models—can also be used as raw cell embeddings. Save the resulting array in `RNA.obsm[cellembed_raw]` (shape: n_cells × d) so the model can access it."
    ]
   },
   {
@@ -513,7 +514,7 @@
     "We performed preprocessing on the filtered scATAC data of s1d1 and s2d1 samples separately:  \n",
     "\n",
     "**For the s1d1 training sample:**  \n",
-    "Following the same procedure as in the `1_Within-sample` tutorial, we partitioned the data using 90% of cells and 90% of peaks to generate train_val sets. This produced:  \n",
+    "Following the same procedure as in the `1_Within-sample analysis` tutorial, we partitioned the data using 90% of cells and 90% of peaks to generate train_val sets. This produced:  \n",
     "- `ad_trainval.h5ad`: containing training cells and training peaks  \n",
     "- `m_trainval.npz`: corresponding count matrix  \n",
     "- `trainval_seqs.h5`: base sequence file for training peaks  \n",
@@ -2808,7 +2809,7 @@
    "id": "9c24a178-6b5f-473e-92b7-97b36cc00a96",
    "metadata": {},
    "source": [
-    "### 6. Evaluate model performance in cross-samples scenario"
+    "### 6. Evaluate model performance in cross-sample scenario"
    ]
   },
   {
@@ -2819,12 +2820,12 @@
     "The following metrics will be computed on the s2d1 test set data:\n",
     "\n",
     "- **Binary classification metrics**:  \n",
-    "  - **(overall, per cell, per peak)auROC** \n",
-    "  - **(overall, per cell, per peak)auPRC** \n",
+    "  - (overall, per cell, per peak) auROC                          \n",
+    "  - (overall, per cell, per peak) auPRC                      \n",
     "  \n",
     "- **Cell state fidelity**:  \n",
-    "  - **Neighbor Score (NS) (k=10, 50, 100)**\n",
-    "  - **Label Score (LS) (k=10, 50, 100)**\n",
+    "  - Neighbor Score (NS) (k=10, 50, 100)                     \n",
+    "  - Label Score (LS) (k=10, 50, 100)                                 \n",
     "\n",
     "This combination of binary classification metrics and cell state fidelity provides a comprehensive evaluation of the model's performance on unseen data from a different sample. "
    ]
