--- a/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
+++ b/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
@@ -12,7 +12,7 @@
     "We used a public paired scRNA/ATAC-seq dataset from healthy donors (PBMC10k, 10x Genomics) to train an XChrom model, and then predicted the epigenomic features of COVID-19 patients based on their scRNA-seq data,it has been annotated cell types and batch information. We first performed batch correction on COVID-19 and PBMC10k using the Harmony, resulting in batch-corrected cell embeddings stored in `RNA.obsm['X_pca_harmony']`. The processed COVID-19 scRNA data and the paired PBMC10k scRNA and scATAC data (filtered using a 1% threshold for PBMC10k) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
     "\n",
     "- **Data Preprocessing**                               \n",
-    "In this tutorial, we use the paired scRNA/ATAC-seq PBMC10k data as the training set, then predict scATAC profiles for the COVID-19 data. For the training scATAC-seq data, we split it by cells and peaks to generate training/validation data for model input, following the same procedure as in the `1_within-sample` tutorial. For the scRNA-seq data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\n",
+    "In this tutorial, we use the paired scRNA/ATAC-seq PBMC10k data as the training set, then predict scATAC profiles for the COVID-19 data. For the training scATAC-seq data, we split it by cells and peaks to generate training/validation data for model input, following the same procedure as in the `1_within_sample analysis` tutorial. For the scRNA-seq data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\n",
     "\n",
     "- **Model Training**                                    \n",
     "During training, the model accepts two types of inputs: ① DNA sequences (one-hot encoded, 1 × 1344bp) and ② cell embeddings (cell number × 32). The model is trained to predict chromatin accessibility probabilities for each genomic region across all cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
@@ -128,7 +128,7 @@
    "source": [
     "We performed preprocessing on the filtered PBMC10k scATAC:\n",
     "\n",
-    "Following the same procedure as in the `1_Within-sample` tutorial, we partitioned the data using 90% of cells and 90% of peaks to generate training/validation sets. This produced:\n",
+    "Following the same procedure as in the `1_Within_sample_analysis` tutorial, we partitioned the data using 90% of cells and 90% of peaks to generate training/validation sets. This produced:\n",
     "- `ad_trainval.h5ad`: containing training cells and training peaks\n",
     "- `m_trainval.npz`: corresponding count matrix\n",
     "- `trainval_seqs.h5`: base sequence file for training peaks                 \n",
@@ -2223,7 +2223,7 @@
    "metadata": {},
    "source": [
     "The `plot_motif_activity()` function performs z-score normalization of the calculated TF activity across cell types. In the resulting visualization:\n",
-    "- **Red** indicates that CEBPB shows relatively higher activity in that cell type\n",
+    "- **Red** indicates that CEBPB shows relatively higher activity in Mono\n",
     "- **Blue** indicates relatively lower activity\n",
     "\n",
     "This normalization allows for clear comparison of TF activity patterns across different cell types and conditions."
