--- a/source/Tutorials/3_Cross-species_calc_ISM.ipynb
+++ b/source/Tutorials/3_Cross-species_calc_ISM.ipynb
@@ -12,7 +12,7 @@
     "We use a publicly available single-cell multiome dataset collected from the motor cortex of human, mouse, macaque, and marmoset. Each species contains multiple samples. In addition to providing raw sequencing data, the authors also offer pre-processed and cell-annotated scRNA data for each sample. We extracted paired data and assigned the annotated cell types to obtain the raw dataset for our study. We then concatenated scRNA data from different samples within each species, and performed cross-species integration based on 1-to-1 orthologous genes using Harmony. The resulting batch-corrected cell embeddings are stored in `RNA.obsm['X_pca_harmony']`. The processed scRNA and scATAC paired data (after filtering and batch correction) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
     "\n",
     "- **Data Preprocessing**                           \n",
-    "As an example, we extract two samples from human and mouse respectively, labeled `m1d1` and `mop3c2`. In this tutorial, we use mouse (`mop3c2`) as the training set and human (`m1d1`) as the test set. For the training scATAC data, we split it by cells and peaks to generate training/validation data for model training, following the same procedure as in the `1_within-sample` tutorial to create model inputs. For the test scATAC data, we use the entire test set for evaluation. For the scRNA data, we directly use the batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as inputs for model training and prediction.\n",
+    "As an example, we extract two samples from human and mouse respectively, labeled `m1d1` and `mop3c2`. In this tutorial, we use mouse (`mop3c2`) as the training set and human (`m1d1`) as the test set. For the training scATAC data, we split it by cells and peaks to generate training/validation data for model training, following the same procedure as in the `1_Within-sample analysis` tutorial to create model inputs. For the test scATAC data, we use the entire test set for evaluation. For the scRNA data, we directly use the batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as inputs for model training and prediction.\n",
     "\n",
     "- **Model Training**                                   \n",
     "XChrom takes two inputs: ① DNA sequences (one-hot encoded, 1 × 1344bp) and ② cell embeddings (cell number × 32). The model is trained to predict chromatin accessibility probabilities for each genomic region across all cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
@@ -24,7 +24,7 @@
     "Together, these metrics demonstrate the model’s ability to generalize across species.                                 \n",
     "\n",
     "- **Interpretability analysis**                                                \n",
-    "We perform in **silico saturation mutagenesis (ISM)** on sequences of interest, predicting the change in accessibility for every cell when mutating each position to its three alternative nucleotides. For each mutation, we compare the mutant prediction with the reference to obtain the per-cell change in accessibility."
+    "We perform in **silico saturation mutagenesis (ISM)** on sequences of interest, predicting the change in accessibility for every cell when mutating each position to its three alternative nucleotides. For each mutation, we compare the mutant prediction with the reference to obtain the per-cell change in accessibility, producing a per-base ISM importance score that quantifies each position’s influence on the model’s predictions."
    ]
   },
   {
@@ -242,7 +242,7 @@
     "We performed preprocessing on the filtered scATAC data of human (m1d1) and mouse (mop3c2) samples separately:\n",
     "\n",
     "**For the mop3c2 mouse training sample:**\n",
-    "Following the same procedure as in the `1_Within-sample` tutorial, we partitioned the data using 90% of cells and 90% of peaks to generate training/validation sets. This produced:\n",
+    "Following the same procedure as in the `1. Within-sample analysis` tutorial, we partitioned the data using 90% of cells and 90% of peaks to generate training/validation sets. This produced:\n",
     "- `ad_trainval.h5ad`: containing training cells and training peaks\n",
     "- `m_trainval.npz`: corresponding count matrix\n",
     "- `trainval_seqs.h5`: base sequence file for training peaks\n",
@@ -2990,12 +2990,12 @@
     "The following metrics will be evaluated on the **human(m1d1) test set data**:\n",
     "\n",
     "- **Binary classification metrics**:  \n",
-    "  - **(overall, per cell, per peak)auROC** \n",
-    "  - **(overall, per cell, per peak)auPRC** \n",
+    "  - (overall, per cell, per peak) auROC                               \n",
+    "  - (overall, per cell, per peak) auPRC                                 \n",
     "  \n",
     "- **Cell state fidelity**:  \n",
-    "  - **Neighbor Score (NS) (k=10, 50, 100)**\n",
-    "  - **Label Score (LS) (k=10, 50, 100)**\n",
+    "  - Neighbor Score (NS) (k=10, 50, 100)                        \n",
+    "  - Label Score (LS) (k=10, 50, 100)                        \n",
     "\n",
     "This combination of binary classification metrics and cell state fidelity provides a comprehensive evaluation of the model's predictive performance on data from different species.                       "
    ]
@@ -3127,7 +3127,8 @@
    "id": "5980bc08-9181-4260-91a9-b3016c6680bd",
    "metadata": {},
    "source": [
-    "### 6. Calculate ISM"
+    "### 6. Calculate ISM\n",
+    "- We computed ISM on a human ATAC-seq peak. The corresponding BED file is provided in our Zenodo repository (DOI: 10.5281/zenodo.16959682) under 3_cross_species/m1d1_peaks.bed (chr14\t73168099\t73168956)."
    ]
   },
   {
