--- a/source/Tutorials/1_Within-sample.ipynb
+++ b/source/Tutorials/1_Within-sample.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "- **Prediction and Evaluation**                                                          \n",
     "To comprehensively assess the predictive performance of XChrom, we perfomed 3 test tasks: \n",
-    "    - (1) \"cross-region\" test, which evaluates the model's ability to predict new genomic regions not seen during training; \n",
-    "    - (2) \"cross-cell\" test, which assesses the model's generalization to new cells not included in the training set;\n",
-    "    - (3) \"cross-both\" test, which tests prediction of unseen genomic regions in unseen cells and represents the most challenging task. \n",
+    "    - \"cross-region\" test, which evaluates the model's ability to predict new genomic regions not seen during training; \n",
+    "    - \"cross-cell\" test, which assesses the model's generalization to new cells not included in the training set;\n",
+    "    - \"cross-both\" test, which tests prediction of unseen genomic regions in unseen cells and represents the most challenging task. \n",
     "\n",
     "    For each test, we used two binary classification metrics—auROC and auPRC—as primary evaluation metrics, which were summarized at the overall, per-cell and per-peak levels. To evaluate the cell state fidelity after prediction, we adopted two metrics: NS, which quantifies cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and LS, which measures the consistency of cell-type labels within local neighborhoods. Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph. \n",
     "\n",
