--- a/source/Tutorials/1_Within-sample.ipynb
+++ b/source/Tutorials/1_Within-sample.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "### filter data\n",
+    "### Filter data\n",
     "ad_rna, ad_atac = xc.pp.filter_multiome_data(\n",
     "    ad_rna = ad_rna,\n",
     "    ad_atac = ad_atac,\n",
