--- a/source/Tutorials/2_Cross-samples.ipynb
+++ b/source/Tutorials/2_Cross-samples.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8d848f74",
    "metadata": {},
@@ -22,7 +21,7 @@
     "- **Prediction and Evaluation**                   \n",
     "After training, we evaluate the preprocessed test sample from two perspectives:                              \n",
     "    - **Binary classification metrics:** auROC and auPRC, as primary evaluation metrics, which were summarized at the overall, per-cell and per-peak levels.\n",
-    "    - **Cell state fidelity:** Using the neighbor score (NS) to quantify cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods.Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph."
+    "    - **Cell state fidelity:** Using the neighbor score (NS) to quantify cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods. Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph."
    ]
   },
   {
@@ -232,7 +231,7 @@
     }
    ],
    "source": [
-    "### filter data\n",
+    "### Filter data\n",
     "train_rna, train_atac = xc.pp.filter_multiome_data(\n",
     "    ad_rna = train_rna,\n",
     "    ad_atac = train_atac,\n",
@@ -386,7 +385,7 @@
     }
    ],
    "source": [
-    "# batch correction\n",
+    "# Batch correction\n",
     "sce.pp.harmony_integrate(rna, 'batchid')\n",
     "'X_pca_harmony' in rna.obsm"
    ]
@@ -467,7 +466,7 @@
     }
    ],
    "source": [
-    "## generate data for model training\n",
+    "## Generate data for model training\n",
     "train_folder = './data/2_cross_samples/train_data/'\n",
     "input_fasta = '/picb/bigdata/project/miaoyuanyuan/hg38.fa'\n",
     "train_atac = sc.read_h5ad('./data/2_cross_samples/train_atac.h5ad')\n",
@@ -496,7 +495,7 @@
     }
    ],
    "source": [
-    "## generate data for model evaluation\n",
+    "## Generate data for model evaluation\n",
     "test_folder = './data/2_cross_samples/test_data/'\n",
     "test_atac = sc.read_h5ad('./data/2_cross_samples/test_atac.h5ad')\n",
     "dict = xc.pp.process_test_dual(\n",
