--- a/source/Tutorials/3_Cross-species_calc_ISM.ipynb
+++ b/source/Tutorials/3_Cross-species_calc_ISM.ipynb
@@ -21,7 +21,7 @@
     "After training, we evaluate the preprocessed test sample from two perspectives:                                          \n",
     "    - **Binary classification metrics:** auROC and auPRC, as primary evaluation metrics, which were summarized at the overall, per-cell and per-peak levels.\n",
     "    - **Cell state fidelity:** Using the neighbor score (NS) to quantify cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods. Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph.                           \n",
-    "Together, these metrics demonstrate the model’s ability to generalize across species.                                 \n",
+    "Together, these metrics demonstrate the model's ability to generalize across species.                                 \n",
     "\n",
     "- **Interpretability analysis**                                                \n",
     "We perform in **silico saturation mutagenesis (ISM)** on sequences of interest, predicting the change in accessibility for every cell when mutating each position to its three alternative nucleotides. For each mutation, we compare the mutant prediction with the reference to obtain the per-cell change in accessibility, producing a per-base ISM importance score that quantifies each position’s influence on the model’s predictions."
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "### filter data\n",
+    "### Filter data\n",
     "m1d1_rna = sc.read_h5ad('./data/3_cross_species/m1d1_rna_harmony.h5ad')\n",
     "m1d1_atac = sc.read_h5ad('./data/3_cross_species/m1d1_atac.h5ad')\n",
     "_, m1d1_atac = xc.pp.filter_multiome_data(\n",
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "## generate data for model training\n",
+    "## Generate data for model training\n",
     "train_folder = './data/3_cross_species/train_data/'\n",
     "input_fasta = '/picb/bigdata/project/miaoyuanyuan/mm10.fa'\n",
     "train_atac = sc.read_h5ad('./data/3_cross_species/mop3c2_atac.h5ad')\n",
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "## generate data for model evaluation\n",
+    "## Generate data for model evaluation\n",
     "test_folder = './data/3_cross_species/test_data/'\n",
     "test_atac = sc.read_h5ad('./data/3_cross_species/m1d1_atac.h5ad')\n",
     "input_fasta = '/picb/bigdata/project/miaoyuanyuan/hg38.fa'\n",
