--- a/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
+++ b/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "## **4. COVID-19 analysis**  \n",
     "\n",
-    "In this tutorial, we demonstrate how to use publicly available paired scRNA and scATAC data to predict scATAC profiles for unpaired samples that only have scRNA data, and to calculate and analyze transcription factor (TF) motif activity across different sample conditions in the dataset.\n",
+    "In this tutorial, we demonstrate how to use publicly available paired scRNA-seq and scATAC-seq data to predict scATAC profiles for unpaired samples that only have scRNA data, and to calculate and analyze transcription factor (TF) motif activity across different sample conditions in the dataset.\n",
     "\n",
-    "We used a public paired scRNA/ATAC-seq dataset from healthy donors (PBMC10k, 10x Genomics) to train an XChrom model, and then predicted the epigenomic features of COVID-19 patients based on their scRNA-seq data,it has been annotated cell types and batch information. We first performed batch correction on COVID-19 and PBMC10k using the Harmony, resulting in batch-corrected cell embeddings stored in `RNA.obsm['X_pca_harmony']`. The processed COVID-19 scRNA data and the paired PBMC10k scRNA and scATAC data (filtered using a 1% threshold for PBMC10k) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
+    "We used a public paired scRNA/ATAC-seq dataset from healthy donors (PBMC10k, 10x Multiome) to train an XChrom model, and then predicted the epigenomic features of COVID-19 patients based on their scRNA-seq data,it has been annotated cell types and batch information. We first performed batch correction on COVID-19 and PBMC10k using the Harmony, resulting in batch-corrected cell embeddings stored in `RNA.obsm['X_pca_harmony']`. The processed COVID-19 scRNA data and the paired PBMC10k scRNA and scATAC data (filtered using a 1% threshold for PBMC10k) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
     "\n",
     "- **Data Preprocessing**                               \n",
     "In this tutorial, we use the paired scRNA/ATAC-seq PBMC10k data as the training set, then predict scATAC profiles for the COVID-19 data. For the training scATAC-seq data, we split it by cells and peaks to generate training/validation data for model input, following the same procedure as in the `1_within_sample analysis` tutorial. For the scRNA-seq data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\n",
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "## generate data for model training\n",
+    "## Generate data for model training\n",
     "train_folder = './data/4_pred_newCondition/train_data/'\n",
     "input_fasta = '/picb/bigdata/project/miaoyuanyuan/hg38.fa'\n",
     "train_atac = sc.read_h5ad('./data/4_pred_newCondition/pbmc10k_atac.h5ad')\n",
